# fh6-tel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-build-env/: action.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-15-fh6-telemetry-dashboard.md
docs/superpowers/specs/: 2026-05-15-forza-telemetry-design.md
packaging/: README.md
packaging/docker/: README.md
packaging/launchd/: com.fh6-tel.server.plist
packaging/systemd/: fh6-tel.service
packaging/windows/: README.md
scripts/: download-map-tiles.mjs
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  commands.rs  db.rs  event.rs  lib.rs  main.rs  parser.rs  serve.rs  session.rs  settings.rs  udp.rs
src-tauri/src/server/: auth.rs  mod.rs  routes.rs  sse.rs  static_assets.rs
src/lib/: analysis.ts  car-name.ts  car-ordinals.json  ipc.ts  mapCrs.ts  mapDefaults.ts  types.ts
src/lib/components/: AnalysisTab.svelte  AttitudeIndicator.svelte  CenterPanel.svelte  CompassBar.svelte  FloatingPanel.svelte  InputStrip.svelte  LapBar.svelte  LiveTrackMap.svelte  MapCalibrator.svelte  MapPanel.svelte  ReplayBar.svelte  SessionDrawer.svelte  SessionViewer.svelte  SettingsModal.svelte  SteeringIndicator.svelte  TireWidget.svelte  TopBar.svelte  TrackMap.svelte
src/lib/stores/: sessions.ts  (+1 more)
src/routes/: +page.svelte
(+1 files in other folders)
