[package]
name = "fh6-tel"
version = "0.1.0"
edition = "2021"

[lib]
name = "fh6_tel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
byteorder = "1"
dirs = "5"
thiserror = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
opt-level = "s"
lto = true
